# area

./: .cargoignore  .gitignore  CONFIG.md  Cargo.toml  EWMH_STATUS.md  README.md  REINSTALL.md  dev.sh  launch-debug.sh  run-navigator.sh  test_comp.sh  todo
crates/area-comp/: Cargo.toml
crates/area-comp/src/: capture.rs  cursor.rs  dri3.rs  fps.rs  gl_context.rs  ipc.rs  main.rs  renderer.rs  window_state.rs
crates/area-focus/: Cargo.toml
crates/area-focus/src/: main.rs
crates/area-ipc/: Cargo.toml
crates/area-ipc/src/: compositor_proto.rs  lib.rs
crates/area-navigator/: Cargo.toml
crates/area-navigator/src/: main.rs  theme_mock.rs
crates/area-panel/: Cargo.toml
crates/area-panel/src/: main.rs
crates/area-shell/: Cargo.toml
crates/area-shell/src/: agent.rs  animation.rs  bar.rs  compositor.rs  grab.rs  ipc.rs  launcher.rs  main.rs  overview.rs  state.rs  wallpaper.rs  wobbly.rs
crates/area-shell/src/panel/plugins/: mod.rs
crates/area-terminal/: Cargo.toml
crates/area-terminal/src/: lib.rs  main.rs  pty.rs  term.rs
crates/area-wm/: Cargo.toml
crates/area-wm/src/: composite.rs  compositor_manager.rs  decorations.rs  dri3.rs  ewmh.rs  ipc.rs  main.rs  window.rs  wm.rs
docs/: ADDING_DBUS_SUPPORT.md  ARCHITECTURE_SUMMARY.md  IPC_AND_ARCHITECTURE.md  KERNEL_INTERFACES.md  README.md
scripts/: install-gdm.sh  install-lightdm.sh  install-session.sh  reload-focus.sh  xephyr-dev.sh
session/: area-comp.service  area-desktop.target  area-launch-app  area-navigator-session  area-session  area-shell.service  area-wm.service  area.service
src/: config.rs  input.rs  main.rs  x11_async.rs
src/compositor/: c_window.rs  cursor.rs  fps.rs  gl_context.rs  mod.rs  renderer.rs
src/dbus/: mod.rs  notifications.rs  power.rs
src/shared/: mod.rs  window_state.rs
src/shell/: logout.rs  mod.rs  panel.rs  render.rs
src/wm/: client.rs  client_flags.rs  cycle.rs  decorations.rs  device.rs  display.rs  event_filter.rs  events.rs  ewmh.rs  focus.rs  hints.rs  icons.rs  keyboard.rs  menu.rs  mod.rs  moveresize.rs  netwm.rs  placement.rs  screen.rs  session.rs  settings.rs  stacking.rs  startup.rs  terminate.rs  transients.rs  workspace.rs
