[workspace]
resolver = "2"
members = [
    "crates/area-wm",
    "crates/area-comp",
    "crates/area-ipc",
    "crates/area-focus",
    "crates/area-panel",
    "crates/area-navigator",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Area Team"]
license = "MIT"
repository = "https://github.com/ohsalmeron/area"

[workspace.dependencies]
# Shared across crates
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
dirs = "5"
chrono = "0.4"
rusqlite = "0.31"

# GUI & Desktop
iced = { version = "0.12", features = ["svg", "image", "tokio"] }
freedesktop-desktop-entry = "0.6"
fuzzy-matcher = "0.3"
regex = "1"
xdg = "2"
walkdir = "2"
linicon = "2" # Icon lookup
thiserror = "1"

# X11 (for area-wm)
x11rb = { version = "0.13", features = ["allow-unsafe-code", "randr", "composite", "render", "shape", "xfixes", "damage", "dri3", "present"] }

# IPC
area-ipc = { path = "crates/area-ipc" }
