[workspace]
resolver = "2"
members = []
# Default to building the unified binary
default-members = ["."]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Area Team"]
license = "MIT"
repository = "https://github.com/ohsalmeron/area"

[workspace.dependencies]
# Shared across crates
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
dirs = "5"
chrono = "0.4"
rusqlite = "0.31"

# GUI & Desktop
iced = { version = "0.12", features = ["svg", "image", "tokio"] }
freedesktop-desktop-entry = "0.6"
fuzzy-matcher = "0.3"
regex = "1"
xdg = "2"
walkdir = "2"
linicon = "2" # Icon lookup
thiserror = "1"

# X11 (for area-wm)
x11rb = { version = "0.13", features = ["allow-unsafe-code", "randr", "composite", "render", "shape", "xfixes", "damage", "dri3", "present", "xinput"] }

# ============================================================================
# Main Binary: area (unified WM + Compositor)
# ============================================================================

[package]
name = "area"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "area"
path = "src/main.rs"

[dependencies]
# X11
x11rb = { workspace = true }
x11-dl = "2.21"

# OpenGL
gl = "0.14"

# Async runtime
tokio = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Serialization (for config)
serde = { workspace = true }
toml = "0.8"

# Utilities
dirs = { workspace = true }
bytemuck = "1.14"

# Async I/O polling (for X11 events)
mio = { version = "1.0", features = ["os-ext"] }

# D-Bus (Desktop Services)
zbus = { version = "5.0", default-features = false, features = ["tokio"] }
