[package]
name = "area-comp"
version.workspace = true
edition.workspace = true

[[bin]]
name = "area-comp"
path = "src/main.rs"

[dependencies]
area-ipc = { workspace = true }
x11rb = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
gl = "0.14"
x11-dl = "2"
libc = "0.2"
nix = { version = "0.30.1", features = ["socket", "fs", "uio", "process"] }
