[package]
name = "area-wm"
version.workspace = true
edition.workspace = true

[[bin]]
name = "area-wm"
path = "src/main.rs"

[dependencies]
area-ipc = { workspace = true }
x11rb = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
libc = "0.2"
